@@ -18,15 +18,15 @@
  */
 package org.apache.fineract.integrationtests.loanaccount.guarantor;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import com.jayway.restassured.builder.RequestSpecBuilder;
-import com.jayway.restassured.builder.ResponseSpecBuilder;
-import com.jayway.restassured.http.ContentType;
-import com.jayway.restassured.specification.RequestSpecification;
-import com.jayway.restassured.specification.ResponseSpecification;
+import io.restassured.builder.RequestSpecBuilder;
+import io.restassured.builder.ResponseSpecBuilder;
+import io.restassured.http.ContentType;
+import io.restassured.specification.RequestSpecification;
+import io.restassured.specification.ResponseSpecification;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
@@ -42,25 +42,28 @@ import org.apache.fineract.integrationtests.common.loans.LoanProductTestBuilder;
 import org.apache.fineract.integrationtests.common.loans.LoanStatusChecker;
 import org.apache.fineract.integrationtests.common.loans.LoanTransactionHelper;
 import org.apache.fineract.integrationtests.common.savings.SavingsAccountHelper;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class GuarantorTest {
 
+    private static final Logger LOG = LoggerFactory.getLogger(GuarantorTest.class);
     private ResponseSpecification responseSpec;
     private RequestSpecification requestSpec;
     private LoanTransactionHelper loanTransactionHelper;
     private GuarantorHelper guarantorHelper;
     private SavingsAccountHelper savingsAccountHelper;
-    private final Float self1_balance = new Float(5000);
-    private final Float external1_balance = new Float(5000);
-    private final Float external2_balance = new Float(5000);
-    private final Float self1_guarantee = new Float(2000);
-    private final Float external1_guarantee = new Float(2000);
-    private final Float external2_guarantee = new Float(1000);
+    private static final Float SELF1_BALANCE = Float.valueOf((float) 5000);
+    private static final Float EXTERNAL1_BALANCE = Float.valueOf((float) 5000);
+    private static final Float EXTERNAL2_BALANCE = Float.valueOf((float) 5000);
+    private static final Float SELF1_GURANTEE = Float.valueOf((float) 2000);
+    private static final Float EXTERNAL1_GURANTEE = Float.valueOf((float) 2000);
+    private static final Float EXTERNAL2_GURANTEE = Float.valueOf((float) 1000);
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception {
         Utils.initializeRESTAssured();
         this.requestSpec = new RequestSpecBuilder().setContentType(ContentType.JSON).build();
@@ -75,9 +78,9 @@ public class GuarantorTest {
     @Test
     public void testGuarantor() {
 
-        Float self1_hold_funds = new Float(0);
-        Float external1_hold_funds = new Float(0);
-        Float external2_hold_funds = new Float(0);
+        Float self1_hold_funds = Float.valueOf((float) 0);
+        Float external1_hold_funds = Float.valueOf((float) 0);
+        Float external2_hold_funds = Float.valueOf((float) 0);
         final Integer clientID = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID);
         final Integer clientID_external = ClientHelper.createClient(this.requestSpec, this.responseSpec);
@@ -86,105 +89,106 @@ public class GuarantorTest {
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID_external);
 
         final Integer selfSavigsId = SavingsAccountHelper.openSavingsAccount(this.requestSpec, this.responseSpec, clientID,
-                String.valueOf(self1_balance));
+                String.valueOf(SELF1_BALANCE));
         final Integer externalSavigsId_1 = SavingsAccountHelper.openSavingsAccount(this.requestSpec, this.responseSpec, clientID_external,
-                String.valueOf(external1_balance));
+                String.valueOf(EXTERNAL1_BALANCE));
         final Integer externalSavigsId_2 = SavingsAccountHelper.openSavingsAccount(this.requestSpec, this.responseSpec, clientID_external2,
-                String.valueOf(external2_balance));
+                String.valueOf(EXTERNAL2_BALANCE));
 
         final Integer loanProductID = createLoanProductWithHoldFunds("50", "20", "20");
         DateFormat dateFormat = new SimpleDateFormat("dd MMMM yyyy", Locale.US);
         Calendar todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -7 * 4);
-        String LOAN_DISBURSEMENT_DATE = dateFormat.format(todaysDate.getTime());
-        final Integer loanID = applyForLoanApplication(clientID, loanProductID, LOAN_DISBURSEMENT_DATE);
-        Assert.assertNotNull(loanID);
+        final String loanDisbursementDate = dateFormat.format(todaysDate.getTime());
+        final Integer loanID = applyForLoanApplication(clientID, loanProductID, loanDisbursementDate);
+        Assertions.assertNotNull(loanID);
         HashMap loanStatusHashMap = LoanStatusChecker.getStatusOfLoan(this.requestSpec, this.responseSpec, loanID);
         LoanStatusChecker.verifyLoanIsPending(loanStatusHashMap);
 
         String guarantorJSON = new GuarantorTestBuilder().externalCustomer().build();
         Integer externalGuarantor = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
-        Assert.assertNotNull(externalGuarantor);
+        Assertions.assertNotNull(externalGuarantor);
 
         guarantorJSON = new GuarantorTestBuilder().existingCustomerWithoutGuaranteeAmount(String.valueOf(clientID_external)).build();
         Integer withoutGuaranteeAmount = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
-        Assert.assertNotNull(withoutGuaranteeAmount);
+        Assertions.assertNotNull(withoutGuaranteeAmount);
 
-        ArrayList<HashMap> errorData = (ArrayList<HashMap>) this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, null, loanID,
+        ArrayList<HashMap> errorData = (ArrayList<HashMap>) this.loanTransactionHelper.approveLoan(loanDisbursementDate, null, loanID,
                 CommonConstants.RESPONSE_ERROR);
         assertTrue(checkForErrorCode(errorData, "validation.msg.loan.guarantor.min.self.guarantee.required"));
         assertTrue(checkForErrorCode(errorData, "validation.msg.loan.guarantor.min.external.guarantee.required"));
         assertTrue(checkForErrorCode(errorData, "validation.msg.loan.guarantor.mandated.guarantee.required"));
 
-        guarantorJSON = new GuarantorTestBuilder().existingCustomerWithGuaranteeAmount(String.valueOf(clientID),
-                String.valueOf(selfSavigsId), String.valueOf(self1_guarantee)).build();
+        guarantorJSON = new GuarantorTestBuilder()
+                .existingCustomerWithGuaranteeAmount(String.valueOf(clientID), String.valueOf(selfSavigsId), String.valueOf(SELF1_GURANTEE))
+                .build();
         Integer selfGuarantee = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
         verifySavingsOnHoldBalance(selfSavigsId, null);
-        Assert.assertNotNull(selfGuarantee);
+        Assertions.assertNotNull(selfGuarantee);
 
-        errorData = (ArrayList<HashMap>) this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, null, loanID,
+        errorData = (ArrayList<HashMap>) this.loanTransactionHelper.approveLoan(loanDisbursementDate, null, loanID,
                 CommonConstants.RESPONSE_ERROR);
         assertFalse(checkForErrorCode(errorData, "validation.msg.loan.guarantor.min.self.guarantee.required"));
         assertTrue(checkForErrorCode(errorData, "validation.msg.loan.guarantor.min.external.guarantee.required"));
         assertTrue(checkForErrorCode(errorData, "validation.msg.loan.guarantor.mandated.guarantee.required"));
 
         guarantorJSON = new GuarantorTestBuilder().existingCustomerWithGuaranteeAmount(String.valueOf(clientID_external),
-                String.valueOf(externalSavigsId_1), String.valueOf(external1_guarantee)).build();
+                String.valueOf(externalSavigsId_1), String.valueOf(EXTERNAL1_GURANTEE)).build();
         Integer externalGuarantee_1 = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
         verifySavingsOnHoldBalance(externalSavigsId_1, null);
-        Assert.assertNotNull(externalGuarantee_1);
+        Assertions.assertNotNull(externalGuarantee_1);
 
-        errorData = (ArrayList<HashMap>) this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, null, loanID,
+        errorData = (ArrayList<HashMap>) this.loanTransactionHelper.approveLoan(loanDisbursementDate, null, loanID,
                 CommonConstants.RESPONSE_ERROR);
         assertFalse(checkForErrorCode(errorData, "validation.msg.loan.guarantor.min.self.guarantee.required"));
         assertFalse(checkForErrorCode(errorData, "validation.msg.loan.guarantor.min.external.guarantee.required"));
         assertTrue(checkForErrorCode(errorData, "validation.msg.loan.guarantor.mandated.guarantee.required"));
 
         guarantorJSON = new GuarantorTestBuilder().existingCustomerWithGuaranteeAmount(String.valueOf(clientID_external2),
-                String.valueOf(externalSavigsId_2), String.valueOf(external2_guarantee)).build();
+                String.valueOf(externalSavigsId_2), String.valueOf(EXTERNAL2_GURANTEE)).build();
         Integer externalGuarantee_2 = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
         verifySavingsOnHoldBalance(externalSavigsId_2, null);
-        Assert.assertNotNull(externalGuarantee_2);
+        Assertions.assertNotNull(externalGuarantee_2);
 
-        System.out.println("-----------------------------------APPROVE LOAN-----------------------------------------");
-        loanStatusHashMap = this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, loanID);
+        LOG.info("-----------------------------------APPROVE LOAN-----------------------------------------");
+        loanStatusHashMap = this.loanTransactionHelper.approveLoan(loanDisbursementDate, loanID);
         LoanStatusChecker.verifyLoanIsApproved(loanStatusHashMap);
         LoanStatusChecker.verifyLoanIsWaitingForDisbursal(loanStatusHashMap);
-        self1_hold_funds += self1_guarantee;
-        external1_hold_funds += external1_guarantee;
-        external2_hold_funds += external2_guarantee;
+        self1_hold_funds += SELF1_GURANTEE;
+        external1_hold_funds += EXTERNAL1_GURANTEE;
+        external2_hold_funds += EXTERNAL2_GURANTEE;
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_2, external2_hold_funds);
 
-        System.out.println("-----------------------------------UNDO APPROVE LOAN-----------------------------------------");
+        LOG.info("-----------------------------------UNDO APPROVE LOAN-----------------------------------------");
         loanStatusHashMap = this.loanTransactionHelper.undoApproval(loanID);
         LoanStatusChecker.verifyLoanIsPending(loanStatusHashMap);
-        verifySavingsOnHoldBalance(selfSavigsId, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_1, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_2, new Float(0));
+        verifySavingsOnHoldBalance(selfSavigsId, Float.valueOf((float) 0));
+        verifySavingsOnHoldBalance(externalSavigsId_1, Float.valueOf((float) 0));
+        verifySavingsOnHoldBalance(externalSavigsId_2, Float.valueOf((float) 0));
 
-        System.out.println("-----------------------------------APPROVE LOAN-----------------------------------------");
-        loanStatusHashMap = this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, loanID);
+        LOG.info("-----------------------------------APPROVE LOAN-----------------------------------------");
+        loanStatusHashMap = this.loanTransactionHelper.approveLoan(loanDisbursementDate, loanID);
         LoanStatusChecker.verifyLoanIsApproved(loanStatusHashMap);
         LoanStatusChecker.verifyLoanIsWaitingForDisbursal(loanStatusHashMap);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_2, external2_hold_funds);
 
-        System.out.println("-------------------------------DISBURSE LOAN-------------------------------------------");
-        loanStatusHashMap = this.loanTransactionHelper.disburseLoan(LOAN_DISBURSEMENT_DATE, loanID);
+        LOG.info("-------------------------------DISBURSE LOAN-------------------------------------------");
+        loanStatusHashMap = this.loanTransactionHelper.disburseLoan(loanDisbursementDate, loanID);
         LoanStatusChecker.verifyLoanIsActive(loanStatusHashMap);
 
         // First repayment
         ArrayList<HashMap> loanSchedule = this.loanTransactionHelper.getLoanRepaymentSchedule(this.requestSpec, this.responseSpec, loanID);
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -7 * 3);
-        String LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
+        String loanRepaymentDate = dateFormat.format(todaysDate.getTime());
         Float totalDueForCurrentPeriod = (Float) loanSchedule.get(1).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(827.5867);
-        external2_hold_funds -= new Float(413.7933);
-        this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
+        external1_hold_funds -= Float.valueOf((float) 827.5867);
+        external2_hold_funds -= Float.valueOf((float) 413.7933);
+        this.loanTransactionHelper.makeRepayment(loanRepaymentDate, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_2, external2_hold_funds);
@@ -192,11 +196,11 @@ public class GuarantorTest {
         // Second repayment
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -7 * 2);
-        LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
+        loanRepaymentDate = dateFormat.format(todaysDate.getTime());
         totalDueForCurrentPeriod = (Float) loanSchedule.get(2).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(831.4067);
-        external2_hold_funds -= new Float(415.7033333);
-        this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
+        external1_hold_funds -= Float.valueOf((float) 831.4067);
+        external2_hold_funds -= Float.valueOf((float) 415.7033333);
+        this.loanTransactionHelper.makeRepayment(loanRepaymentDate, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_2, external2_hold_funds);
@@ -204,22 +208,22 @@ public class GuarantorTest {
         // third repayment
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -7);
-        LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
+        loanRepaymentDate = dateFormat.format(todaysDate.getTime());
         totalDueForCurrentPeriod = (Float) loanSchedule.get(3).get("totalDueForPeriod");
-        self1_hold_funds -= new Float(741.355);
-        this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
+        self1_hold_funds -= Float.valueOf((float) 741.355);
+        this.loanTransactionHelper.makeRepayment(loanRepaymentDate, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
-        verifySavingsOnHoldBalance(externalSavigsId_1, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_2, new Float(0));
+        verifySavingsOnHoldBalance(externalSavigsId_1, Float.valueOf((float) 0));
+        verifySavingsOnHoldBalance(externalSavigsId_2, Float.valueOf((float) 0));
 
         // forth repayment
         todaysDate = Calendar.getInstance();
-        LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
+        loanRepaymentDate = dateFormat.format(todaysDate.getTime());
         totalDueForCurrentPeriod = (Float) loanSchedule.get(3).get("totalDueForPeriod");
-        this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
-        verifySavingsOnHoldBalance(selfSavigsId, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_1, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_2, new Float(0));
+        this.loanTransactionHelper.makeRepayment(loanRepaymentDate, totalDueForCurrentPeriod, loanID);
+        verifySavingsOnHoldBalance(selfSavigsId, Float.valueOf((float) 0));
+        verifySavingsOnHoldBalance(externalSavigsId_1, Float.valueOf((float) 0));
+        verifySavingsOnHoldBalance(externalSavigsId_2, Float.valueOf((float) 0));
 
         loanStatusHashMap = LoanStatusChecker.getStatusOfLoan(this.requestSpec, this.responseSpec, loanID);
         LoanStatusChecker.verifyLoanAccountIsClosed(loanStatusHashMap);
@@ -230,9 +234,9 @@ public class GuarantorTest {
     @Test
     public void testGuarantor_UNDO_DISBURSAL() {
 
-        Float self1_hold_funds = new Float(0);
-        Float external1_hold_funds = new Float(0);
-        Float external2_hold_funds = new Float(0);
+        Float self1_hold_funds = Float.valueOf((float) 0);
+        Float external1_hold_funds = Float.valueOf((float) 0);
+        Float external2_hold_funds = Float.valueOf((float) 0);
         final Integer clientID = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID);
         final Integer clientID_external = ClientHelper.createClient(this.requestSpec, this.responseSpec);
@@ -241,88 +245,89 @@ public class GuarantorTest {
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID_external);
 
         final Integer selfSavigsId = SavingsAccountHelper.openSavingsAccount(this.requestSpec, this.responseSpec, clientID,
-                String.valueOf(self1_balance));
+                String.valueOf(SELF1_BALANCE));
         final Integer externalSavigsId_1 = SavingsAccountHelper.openSavingsAccount(this.requestSpec, this.responseSpec, clientID_external,
-                String.valueOf(external1_balance));
+                String.valueOf(EXTERNAL1_BALANCE));
         final Integer externalSavigsId_3 = SavingsAccountHelper.openSavingsAccount(this.requestSpec, this.responseSpec, clientID_external,
-                String.valueOf(external1_balance));
+                String.valueOf(EXTERNAL1_BALANCE));
         final Integer externalSavigsId_2 = SavingsAccountHelper.openSavingsAccount(this.requestSpec, this.responseSpec, clientID_external2,
-                String.valueOf(external2_balance));
+                String.valueOf(EXTERNAL2_BALANCE));
 
         final Integer loanProductID = createLoanProductWithHoldFunds("50", "20", "20");
         DateFormat dateFormat = new SimpleDateFormat("dd MMMM yyyy", Locale.US);
         Calendar todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -7 * 4);
-        String LOAN_DISBURSEMENT_DATE = dateFormat.format(todaysDate.getTime());
-        final Integer loanID = applyForLoanApplication(clientID, loanProductID, LOAN_DISBURSEMENT_DATE);
-        Assert.assertNotNull(loanID);
+        final String loanDisbursementDate = dateFormat.format(todaysDate.getTime());
+        final Integer loanID = applyForLoanApplication(clientID, loanProductID, loanDisbursementDate);
+        Assertions.assertNotNull(loanID);
         HashMap loanStatusHashMap = LoanStatusChecker.getStatusOfLoan(this.requestSpec, this.responseSpec, loanID);
         LoanStatusChecker.verifyLoanIsPending(loanStatusHashMap);
 
         String guarantorJSON = new GuarantorTestBuilder().externalCustomer().build();
         Integer externalGuarantor = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
-        Assert.assertNotNull(externalGuarantor);
+        Assertions.assertNotNull(externalGuarantor);
 
         guarantorJSON = new GuarantorTestBuilder().existingCustomerWithoutGuaranteeAmount(String.valueOf(clientID_external)).build();
         Integer withoutGuaranteeAmount = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
-        Assert.assertNotNull(withoutGuaranteeAmount);
+        Assertions.assertNotNull(withoutGuaranteeAmount);
 
-        ArrayList<HashMap> errorData = (ArrayList<HashMap>) this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, null, loanID,
+        ArrayList<HashMap> errorData = (ArrayList<HashMap>) this.loanTransactionHelper.approveLoan(loanDisbursementDate, null, loanID,
                 CommonConstants.RESPONSE_ERROR);
         assertTrue(checkForErrorCode(errorData, "validation.msg.loan.guarantor.min.self.guarantee.required"));
         assertTrue(checkForErrorCode(errorData, "validation.msg.loan.guarantor.min.external.guarantee.required"));
         assertTrue(checkForErrorCode(errorData, "validation.msg.loan.guarantor.mandated.guarantee.required"));
 
-        guarantorJSON = new GuarantorTestBuilder().existingCustomerWithGuaranteeAmount(String.valueOf(clientID),
-                String.valueOf(selfSavigsId), String.valueOf(self1_guarantee)).build();
+        guarantorJSON = new GuarantorTestBuilder()
+                .existingCustomerWithGuaranteeAmount(String.valueOf(clientID), String.valueOf(selfSavigsId), String.valueOf(SELF1_GURANTEE))
+                .build();
         Integer selfGuarantee = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
         verifySavingsOnHoldBalance(selfSavigsId, null);
-        Assert.assertNotNull(selfGuarantee);
+        Assertions.assertNotNull(selfGuarantee);
 
-        errorData = (ArrayList<HashMap>) this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, null, loanID,
+        errorData = (ArrayList<HashMap>) this.loanTransactionHelper.approveLoan(loanDisbursementDate, null, loanID,
                 CommonConstants.RESPONSE_ERROR);
         assertFalse(checkForErrorCode(errorData, "validation.msg.loan.guarantor.min.self.guarantee.required"));
         assertTrue(checkForErrorCode(errorData, "validation.msg.loan.guarantor.min.external.guarantee.required"));
         assertTrue(checkForErrorCode(errorData, "validation.msg.loan.guarantor.mandated.guarantee.required"));
 
         guarantorJSON = new GuarantorTestBuilder().existingCustomerWithGuaranteeAmount(String.valueOf(clientID_external),
-                String.valueOf(externalSavigsId_1), String.valueOf(external1_guarantee)).build();
+                String.valueOf(externalSavigsId_1), String.valueOf(EXTERNAL1_GURANTEE)).build();
         Integer externalGuarantee_1 = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
         verifySavingsOnHoldBalance(externalSavigsId_1, null);
-        Assert.assertNotNull(externalGuarantee_1);
+        Assertions.assertNotNull(externalGuarantee_1);
 
-        errorData = (ArrayList<HashMap>) this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, null, loanID,
+        errorData = (ArrayList<HashMap>) this.loanTransactionHelper.approveLoan(loanDisbursementDate, null, loanID,
                 CommonConstants.RESPONSE_ERROR);
         assertFalse(checkForErrorCode(errorData, "validation.msg.loan.guarantor.min.self.guarantee.required"));
         assertFalse(checkForErrorCode(errorData, "validation.msg.loan.guarantor.min.external.guarantee.required"));
         assertTrue(checkForErrorCode(errorData, "validation.msg.loan.guarantor.mandated.guarantee.required"));
 
         guarantorJSON = new GuarantorTestBuilder().existingCustomerWithGuaranteeAmount(String.valueOf(clientID_external2),
-                String.valueOf(externalSavigsId_2), String.valueOf(external2_guarantee)).build();
+                String.valueOf(externalSavigsId_2), String.valueOf(EXTERNAL2_GURANTEE)).build();
         Integer externalGuarantee_2 = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
-        Assert.assertNotNull(externalGuarantee_2);
+        Assertions.assertNotNull(externalGuarantee_2);
         verifySavingsOnHoldBalance(externalSavigsId_2, null);
 
-        System.out.println("-----------------------------------APPROVE LOAN-----------------------------------------");
-        loanStatusHashMap = this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, loanID);
+        LOG.info("-----------------------------------APPROVE LOAN-----------------------------------------");
+        loanStatusHashMap = this.loanTransactionHelper.approveLoan(loanDisbursementDate, loanID);
         LoanStatusChecker.verifyLoanIsApproved(loanStatusHashMap);
         LoanStatusChecker.verifyLoanIsWaitingForDisbursal(loanStatusHashMap);
-        self1_hold_funds += self1_guarantee;
-        external1_hold_funds += external1_guarantee;
-        external2_hold_funds += external2_guarantee;
+        self1_hold_funds += SELF1_GURANTEE;
+        external1_hold_funds += EXTERNAL1_GURANTEE;
+        external2_hold_funds += EXTERNAL2_GURANTEE;
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_2, external2_hold_funds);
 
-        System.out.println("-----------------------------------UNDO APPROVE LOAN-----------------------------------------");
+        LOG.info("-----------------------------------UNDO APPROVE LOAN-----------------------------------------");
         loanStatusHashMap = this.loanTransactionHelper.undoApproval(loanID);
         LoanStatusChecker.verifyLoanIsPending(loanStatusHashMap);
-        verifySavingsOnHoldBalance(selfSavigsId, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_1, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_2, new Float(0));
+        verifySavingsOnHoldBalance(selfSavigsId, Float.valueOf((float) 0));
+        verifySavingsOnHoldBalance(externalSavigsId_1, Float.valueOf((float) 0));
+        verifySavingsOnHoldBalance(externalSavigsId_2, Float.valueOf((float) 0));
 
-        System.out.println("-----------------------------------APPROVE LOAN-----------------------------------------");
-        loanStatusHashMap = this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, loanID);
+        LOG.info("-----------------------------------APPROVE LOAN-----------------------------------------");
+        loanStatusHashMap = this.loanTransactionHelper.approveLoan(loanDisbursementDate, loanID);
         LoanStatusChecker.verifyLoanIsApproved(loanStatusHashMap);
         LoanStatusChecker.verifyLoanIsWaitingForDisbursal(loanStatusHashMap);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
@@ -344,10 +349,10 @@ public class GuarantorTest {
         assertTrue(checkForErrorCode(error, "validation.msg.loan.guarantor.min.external.guarantee.required"));
 
         guarantorJSON = new GuarantorTestBuilder().existingCustomerWithGuaranteeAmount(String.valueOf(clientID_external),
-                String.valueOf(externalSavigsId_3), String.valueOf(external1_guarantee)).build();
+                String.valueOf(externalSavigsId_3), String.valueOf(EXTERNAL1_GURANTEE)).build();
         Integer externalGuarantee_3 = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
-        verifySavingsOnHoldBalance(externalSavigsId_3, external1_guarantee);
-        Assert.assertNotNull(externalGuarantee_3);
+        verifySavingsOnHoldBalance(externalSavigsId_3, EXTERNAL1_GURANTEE);
+        Assertions.assertNotNull(externalGuarantee_3);
 
         this.guarantorHelper.deleteGuarantor(externalGuarantee_1, fundDetailId, loanID);
         guarantors = this.guarantorHelper.getAllGuarantor(loanID);
@@ -363,19 +368,19 @@ public class GuarantorTest {
             }
         }
 
-        System.out.println("-------------------------------DISBURSE LOAN-------------------------------------------");
-        loanStatusHashMap = this.loanTransactionHelper.disburseLoan(LOAN_DISBURSEMENT_DATE, loanID);
+        LOG.info("-------------------------------DISBURSE LOAN-------------------------------------------");
+        loanStatusHashMap = this.loanTransactionHelper.disburseLoan(loanDisbursementDate, loanID);
         LoanStatusChecker.verifyLoanIsActive(loanStatusHashMap);
 
         // First repayment
         ArrayList<HashMap> loanSchedule = this.loanTransactionHelper.getLoanRepaymentSchedule(this.requestSpec, this.responseSpec, loanID);
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -7 * 3);
-        String LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
+        String loanRepaymentDate = dateFormat.format(todaysDate.getTime());
         Float totalDueForCurrentPeriod = (Float) loanSchedule.get(1).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(827.5867);
-        external2_hold_funds -= new Float(413.7933);
-        this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
+        external1_hold_funds -= Float.valueOf((float) 827.5867);
+        external2_hold_funds -= Float.valueOf((float) 413.7933);
+        this.loanTransactionHelper.makeRepayment(loanRepaymentDate, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_3, external1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_2, external2_hold_funds);
@@ -383,11 +388,11 @@ public class GuarantorTest {
         // Second repayment
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -7 * 2);
-        LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
+        loanRepaymentDate = dateFormat.format(todaysDate.getTime());
         totalDueForCurrentPeriod = (Float) loanSchedule.get(2).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(831.4067);
-        external2_hold_funds -= new Float(415.7033333);
-        this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
+        external1_hold_funds -= Float.valueOf((float) 831.4067);
+        external2_hold_funds -= Float.valueOf((float) 415.7033333);
+        this.loanTransactionHelper.makeRepayment(loanRepaymentDate, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_3, external1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_2, external2_hold_funds);
@@ -395,17 +400,17 @@ public class GuarantorTest {
         // third repayment
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -7);
-        LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
+        loanRepaymentDate = dateFormat.format(todaysDate.getTime());
         totalDueForCurrentPeriod = (Float) loanSchedule.get(3).get("totalDueForPeriod");
-        Float self1_hold_funds_temp = self1_hold_funds - new Float(741.355);
-        HashMap transactionDetail = this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
+        Float self1_hold_funds_temp = self1_hold_funds - Float.valueOf((float) 741.355);
+        HashMap transactionDetail = this.loanTransactionHelper.makeRepayment(loanRepaymentDate, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds_temp);
-        verifySavingsOnHoldBalance(externalSavigsId_3, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_2, new Float(0));
+        verifySavingsOnHoldBalance(externalSavigsId_3, Float.valueOf((float) 0));
+        verifySavingsOnHoldBalance(externalSavigsId_2, Float.valueOf((float) 0));
 
         // undo repayment
         this.loanTransactionHelper.adjustLoanTransaction(loanID, (Integer) transactionDetail.get(CommonConstants.RESPONSE_RESOURCE_ID),
-                LOAN_REPAYMENT_DATE, "0", "");
+                loanRepaymentDate, "0", "");
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_3, external1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_2, external2_hold_funds);
@@ -414,76 +419,77 @@ public class GuarantorTest {
         loanStatusHashMap = this.loanTransactionHelper.undoDisbursal(loanID);
         LoanStatusChecker.verifyLoanIsApproved(loanStatusHashMap);
         LoanStatusChecker.verifyLoanIsWaitingForDisbursal(loanStatusHashMap);
-        verifySavingsOnHoldBalance(selfSavigsId, new Float(self1_guarantee));
-        verifySavingsOnHoldBalance(externalSavigsId_3, new Float(external1_guarantee));
-        verifySavingsOnHoldBalance(externalSavigsId_2, new Float(external2_guarantee));
+        verifySavingsOnHoldBalance(selfSavigsId, Float.valueOf((float) SELF1_GURANTEE));
+        verifySavingsOnHoldBalance(externalSavigsId_3, Float.valueOf((float) EXTERNAL1_GURANTEE));
+        verifySavingsOnHoldBalance(externalSavigsId_2, Float.valueOf((float) EXTERNAL2_GURANTEE));
     }
 
     @SuppressWarnings({ "rawtypes", "unchecked" })
     @Test
     public void testGuarantor_RECOVER_GUARANTEES() {
 
-        Float self1_hold_funds = new Float(0);
-        Float external1_hold_funds = new Float(0);
+        Float self1_hold_funds = Float.valueOf((float) 0);
+        Float external1_hold_funds = Float.valueOf((float) 0);
         final Integer clientID = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID);
         final Integer clientID_external = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID_external);
 
         final Integer selfSavigsId = SavingsAccountHelper.openSavingsAccount(this.requestSpec, this.responseSpec, clientID,
-                String.valueOf(self1_balance));
+                String.valueOf(SELF1_BALANCE));
         final Integer externalSavigsId_1 = SavingsAccountHelper.openSavingsAccount(this.requestSpec, this.responseSpec, clientID_external,
-                String.valueOf(external1_balance));
+                String.valueOf(EXTERNAL1_BALANCE));
 
         final Integer loanProductID = createLoanProductWithHoldFunds("40", "20", "20");
         DateFormat dateFormat = new SimpleDateFormat("dd MMMM yyyy", Locale.US);
         Calendar todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -21);
-        String LOAN_DISBURSEMENT_DATE = dateFormat.format(todaysDate.getTime());
-        final Integer loanID = applyForLoanApplication(clientID, loanProductID, LOAN_DISBURSEMENT_DATE);
-        Assert.assertNotNull(loanID);
+        final String loanDisbursementDate = dateFormat.format(todaysDate.getTime());
+        final Integer loanID = applyForLoanApplication(clientID, loanProductID, loanDisbursementDate);
+        Assertions.assertNotNull(loanID);
         HashMap loanStatusHashMap = LoanStatusChecker.getStatusOfLoan(this.requestSpec, this.responseSpec, loanID);
         LoanStatusChecker.verifyLoanIsPending(loanStatusHashMap);
 
-        String guarantorJSON = new GuarantorTestBuilder().existingCustomerWithGuaranteeAmount(String.valueOf(clientID),
-                String.valueOf(selfSavigsId), String.valueOf(self1_guarantee)).build();
+        String guarantorJSON = new GuarantorTestBuilder()
+                .existingCustomerWithGuaranteeAmount(String.valueOf(clientID), String.valueOf(selfSavigsId), String.valueOf(SELF1_GURANTEE))
+                .build();
         Integer selfGuarantee = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
         verifySavingsOnHoldBalance(selfSavigsId, null);
-        Assert.assertNotNull(selfGuarantee);
+        Assertions.assertNotNull(selfGuarantee);
 
         guarantorJSON = new GuarantorTestBuilder().existingCustomerWithGuaranteeAmount(String.valueOf(clientID_external),
-                String.valueOf(externalSavigsId_1), String.valueOf(external1_guarantee)).build();
+                String.valueOf(externalSavigsId_1), String.valueOf(EXTERNAL1_GURANTEE)).build();
         Integer externalGuarantee_1 = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
         verifySavingsOnHoldBalance(externalSavigsId_1, null);
-        Assert.assertNotNull(externalGuarantee_1);
+        Assertions.assertNotNull(externalGuarantee_1);
 
-        System.out.println("-----------------------------------APPROVE LOAN-----------------------------------------");
-        loanStatusHashMap = this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, loanID);
+        LOG.info("-----------------------------------APPROVE LOAN-----------------------------------------");
+        loanStatusHashMap = this.loanTransactionHelper.approveLoan(loanDisbursementDate, loanID);
         LoanStatusChecker.verifyLoanIsApproved(loanStatusHashMap);
         LoanStatusChecker.verifyLoanIsWaitingForDisbursal(loanStatusHashMap);
-        self1_hold_funds += self1_guarantee;
-        external1_hold_funds += external1_guarantee;
+        self1_hold_funds += SELF1_GURANTEE;
+        external1_hold_funds += EXTERNAL1_GURANTEE;
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
 
-        System.out.println("-------------------------------DISBURSE LOAN-------------------------------------------");
-        loanStatusHashMap = this.loanTransactionHelper.disburseLoan(LOAN_DISBURSEMENT_DATE, loanID);
+        LOG.info("-------------------------------DISBURSE LOAN-------------------------------------------");
+        loanStatusHashMap = this.loanTransactionHelper.disburseLoan(loanDisbursementDate, loanID);
         LoanStatusChecker.verifyLoanIsActive(loanStatusHashMap);
 
         // First repayment
         ArrayList<HashMap> loanSchedule = this.loanTransactionHelper.getLoanRepaymentSchedule(this.requestSpec, this.responseSpec, loanID);
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -14);
-        String LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
+        final String LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
         Float totalDueForCurrentPeriod = (Float) loanSchedule.get(1).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(993.104);
+        external1_hold_funds -= Float.valueOf((float) 993.104);
         this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
 
         this.loanTransactionHelper.recoverFromGuarantor(loanID);
-        verifySavingsBalanceAndOnHoldBalance(selfSavigsId, new Float(0), self1_balance - self1_hold_funds);
-        verifySavingsBalanceAndOnHoldBalance(externalSavigsId_1, new Float(0), external1_balance - external1_hold_funds);
+        verifySavingsBalanceAndOnHoldBalance(selfSavigsId, Float.valueOf((float) 0), SELF1_BALANCE - self1_hold_funds);
+        verifySavingsBalanceAndOnHoldBalance(externalSavigsId_1, Float.valueOf((float) 0), EXTERNAL1_BALANCE - external1_hold_funds);
 
     }
 
@@ -491,17 +497,17 @@ public class GuarantorTest {
     @Test
     public void testGuarantor_RECOVER_GUARANTEES_WITH_MORE_GUARANTEE() {
 
-        Float self1_hold_funds = new Float(0);
-        Float external1_hold_funds = new Float(0);
+        Float self1_hold_funds = Float.valueOf((float) 0);
+        Float external1_hold_funds = Float.valueOf((float) 0);
         final Integer clientID = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID);
         final Integer clientID_external = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID_external);
 
-        Float selfBalance = new Float(10000);
-        Float externalBalance = new Float(10000);
-        Float selfguarantee = new Float(6000);
-        Float externalguarantee = new Float(7000);
+        Float selfBalance = Float.valueOf((float) 10000);
+        Float externalBalance = Float.valueOf((float) 10000);
+        Float selfguarantee = Float.valueOf((float) 6000);
+        Float externalguarantee = Float.valueOf((float) 7000);
 
         final Integer selfSavigsId = SavingsAccountHelper.openSavingsAccount(this.requestSpec, this.responseSpec, clientID,
                 String.valueOf(selfBalance));
@@ -512,26 +518,27 @@ public class GuarantorTest {
         DateFormat dateFormat = new SimpleDateFormat("dd MMMM yyyy", Locale.US);
         Calendar todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -21);
-        String LOAN_DISBURSEMENT_DATE = dateFormat.format(todaysDate.getTime());
-        final Integer loanID = applyForLoanApplication(clientID, loanProductID, LOAN_DISBURSEMENT_DATE);
-        Assert.assertNotNull(loanID);
+        final String loanDisbursementDate = dateFormat.format(todaysDate.getTime());
+        final Integer loanID = applyForLoanApplication(clientID, loanProductID, loanDisbursementDate);
+        Assertions.assertNotNull(loanID);
         HashMap loanStatusHashMap = LoanStatusChecker.getStatusOfLoan(this.requestSpec, this.responseSpec, loanID);
         LoanStatusChecker.verifyLoanIsPending(loanStatusHashMap);
 
-        String guarantorJSON = new GuarantorTestBuilder().existingCustomerWithGuaranteeAmount(String.valueOf(clientID),
-                String.valueOf(selfSavigsId), String.valueOf(selfguarantee)).build();
+        String guarantorJSON = new GuarantorTestBuilder()
+                .existingCustomerWithGuaranteeAmount(String.valueOf(clientID), String.valueOf(selfSavigsId), String.valueOf(selfguarantee))
+                .build();
         Integer selfGuarantee = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
         verifySavingsOnHoldBalance(selfSavigsId, null);
-        Assert.assertNotNull(selfGuarantee);
+        Assertions.assertNotNull(selfGuarantee);
 
         guarantorJSON = new GuarantorTestBuilder().existingCustomerWithGuaranteeAmount(String.valueOf(clientID_external),
                 String.valueOf(externalSavigsId_1), String.valueOf(externalguarantee)).build();
         Integer externalGuarantee_1 = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
         verifySavingsOnHoldBalance(externalSavigsId_1, null);
-        Assert.assertNotNull(externalGuarantee_1);
+        Assertions.assertNotNull(externalGuarantee_1);
 
-        System.out.println("-----------------------------------APPROVE LOAN-----------------------------------------");
-        loanStatusHashMap = this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, loanID);
+        LOG.info("-----------------------------------APPROVE LOAN-----------------------------------------");
+        loanStatusHashMap = this.loanTransactionHelper.approveLoan(loanDisbursementDate, loanID);
         LoanStatusChecker.verifyLoanIsApproved(loanStatusHashMap);
         LoanStatusChecker.verifyLoanIsWaitingForDisbursal(loanStatusHashMap);
         self1_hold_funds += selfguarantee;
@@ -539,109 +546,110 @@ public class GuarantorTest {
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
 
-        System.out.println("-------------------------------DISBURSE LOAN-------------------------------------------");
-        loanStatusHashMap = this.loanTransactionHelper.disburseLoan(LOAN_DISBURSEMENT_DATE, loanID);
+        LOG.info("-------------------------------DISBURSE LOAN-------------------------------------------");
+        loanStatusHashMap = this.loanTransactionHelper.disburseLoan(loanDisbursementDate, loanID);
         LoanStatusChecker.verifyLoanIsActive(loanStatusHashMap);
 
         // First repayment
         ArrayList<HashMap> loanSchedule = this.loanTransactionHelper.getLoanRepaymentSchedule(this.requestSpec, this.responseSpec, loanID);
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -14);
-        String LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
+        final String LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
         Float totalDueForCurrentPeriod = (Float) loanSchedule.get(1).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(3227.588);
+        external1_hold_funds -= Float.valueOf((float) 3227.588);
         this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
 
         this.loanTransactionHelper.recoverFromGuarantor(loanID);
-        verifySavingsBalanceAndOnHoldBalance(selfSavigsId, new Float(0), selfBalance - new Float(4615.385));
-        verifySavingsBalanceAndOnHoldBalance(externalSavigsId_1, new Float(0), externalBalance - new Float(2901.8553));
+        verifySavingsBalanceAndOnHoldBalance(selfSavigsId, Float.valueOf((float) 0), selfBalance - Float.valueOf((float) 4615.385));
+        verifySavingsBalanceAndOnHoldBalance(externalSavigsId_1, Float.valueOf((float) 0),
+                externalBalance - Float.valueOf((float) 2901.8553));
 
     }
-
 
     @SuppressWarnings({ "rawtypes", "unchecked" })
     @Test
     public void testGuarantor_WRITE_OFF_LOAN() {
 
-        Float self1_hold_funds = new Float(0);
-        Float external1_hold_funds = new Float(0);
+        Float self1_hold_funds = Float.valueOf((float) 0);
+        Float external1_hold_funds = Float.valueOf((float) 0);
         final Integer clientID = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID);
         final Integer clientID_external = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID_external);
 
         final Integer selfSavigsId = SavingsAccountHelper.openSavingsAccount(this.requestSpec, this.responseSpec, clientID,
-                String.valueOf(self1_balance));
+                String.valueOf(SELF1_BALANCE));
         final Integer externalSavigsId_1 = SavingsAccountHelper.openSavingsAccount(this.requestSpec, this.responseSpec, clientID_external,
-                String.valueOf(external1_balance));
+                String.valueOf(EXTERNAL1_BALANCE));
 
         final Integer loanProductID = createLoanProductWithHoldFunds("40", "20", "20");
         DateFormat dateFormat = new SimpleDateFormat("dd MMMM yyyy", Locale.US);
         Calendar todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -21);
-        String LOAN_DISBURSEMENT_DATE = dateFormat.format(todaysDate.getTime());
-        final Integer loanID = applyForLoanApplication(clientID, loanProductID, LOAN_DISBURSEMENT_DATE);
-        Assert.assertNotNull(loanID);
+        final String loanDisbursementDate = dateFormat.format(todaysDate.getTime());
+        final Integer loanID = applyForLoanApplication(clientID, loanProductID, loanDisbursementDate);
+        Assertions.assertNotNull(loanID);
         HashMap loanStatusHashMap = LoanStatusChecker.getStatusOfLoan(this.requestSpec, this.responseSpec, loanID);
         LoanStatusChecker.verifyLoanIsPending(loanStatusHashMap);
 
-        String guarantorJSON = new GuarantorTestBuilder().existingCustomerWithGuaranteeAmount(String.valueOf(clientID),
-                String.valueOf(selfSavigsId), String.valueOf(self1_guarantee)).build();
+        String guarantorJSON = new GuarantorTestBuilder()
+                .existingCustomerWithGuaranteeAmount(String.valueOf(clientID), String.valueOf(selfSavigsId), String.valueOf(SELF1_GURANTEE))
+                .build();
         Integer selfGuarantee = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
         verifySavingsOnHoldBalance(selfSavigsId, null);
-        Assert.assertNotNull(selfGuarantee);
+        Assertions.assertNotNull(selfGuarantee);
 
         guarantorJSON = new GuarantorTestBuilder().existingCustomerWithGuaranteeAmount(String.valueOf(clientID_external),
-                String.valueOf(externalSavigsId_1), String.valueOf(external1_guarantee)).build();
+                String.valueOf(externalSavigsId_1), String.valueOf(EXTERNAL1_GURANTEE)).build();
         Integer externalGuarantee_1 = this.guarantorHelper.createGuarantor(loanID, guarantorJSON);
-        Assert.assertNotNull(externalGuarantee_1);
+        Assertions.assertNotNull(externalGuarantee_1);
         verifySavingsOnHoldBalance(externalSavigsId_1, null);
 
-        System.out.println("-----------------------------------APPROVE LOAN-----------------------------------------");
-        loanStatusHashMap = this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, loanID);
+        LOG.info("-----------------------------------APPROVE LOAN-----------------------------------------");
+        loanStatusHashMap = this.loanTransactionHelper.approveLoan(loanDisbursementDate, loanID);
         LoanStatusChecker.verifyLoanIsApproved(loanStatusHashMap);
         LoanStatusChecker.verifyLoanIsWaitingForDisbursal(loanStatusHashMap);
-        self1_hold_funds += self1_guarantee;
-        external1_hold_funds += external1_guarantee;
+        self1_hold_funds += SELF1_GURANTEE;
+        external1_hold_funds += EXTERNAL1_GURANTEE;
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
 
-        System.out.println("-------------------------------DISBURSE LOAN-------------------------------------------");
-        loanStatusHashMap = this.loanTransactionHelper.disburseLoan(LOAN_DISBURSEMENT_DATE, loanID);
+        LOG.info("-------------------------------DISBURSE LOAN-------------------------------------------");
+        loanStatusHashMap = this.loanTransactionHelper.disburseLoan(loanDisbursementDate, loanID);
         LoanStatusChecker.verifyLoanIsActive(loanStatusHashMap);
 
         // First repayment
         ArrayList<HashMap> loanSchedule = this.loanTransactionHelper.getLoanRepaymentSchedule(this.requestSpec, this.responseSpec, loanID);
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.DAY_OF_MONTH, -14);
-        String LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
+        final String LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
         Float totalDueForCurrentPeriod = (Float) loanSchedule.get(1).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(993.104);
+        external1_hold_funds -= Float.valueOf((float) 993.104);
         this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
 
         todaysDate = Calendar.getInstance();
-        String LOAN_WRITEOFF_DATE = dateFormat.format(todaysDate.getTime());
+        final String LOAN_WRITEOFF_DATE = dateFormat.format(todaysDate.getTime());
         this.loanTransactionHelper.writeOffLoan(LOAN_WRITEOFF_DATE, loanID);
-        verifySavingsBalanceAndOnHoldBalance(selfSavigsId, new Float(0), self1_balance);
-        verifySavingsBalanceAndOnHoldBalance(externalSavigsId_1, new Float(0), external1_balance);
+        verifySavingsBalanceAndOnHoldBalance(selfSavigsId, Float.valueOf((float) 0), SELF1_BALANCE);
+        verifySavingsBalanceAndOnHoldBalance(externalSavigsId_1, Float.valueOf((float) 0), EXTERNAL1_BALANCE);
 
     }
 
     private void verifySavingsOnHoldBalance(final Integer savingsId, final Float expectedBalance) {
         Float onHoldAmount = (Float) this.savingsAccountHelper.getSavingsDetails(savingsId, "onHoldFunds");
-        assertEquals("Verifying On Hold Funds", expectedBalance, onHoldAmount);
+        assertEquals(expectedBalance, onHoldAmount, "Verifying On Hold Funds");
     }
 
     @SuppressWarnings({ "rawtypes", "cast" })
     private void verifySavingsBalanceAndOnHoldBalance(final Integer savingsId, final Float expectedBalance, final Float accountBalance) {
         HashMap savingsDetails = (HashMap) this.savingsAccountHelper.getSavingsDetails(savingsId);
-        assertEquals("Verifying On Hold Funds", expectedBalance, savingsDetails.get("onHoldFunds"));
+        assertEquals(expectedBalance, savingsDetails.get("onHoldFunds"), "Verifying On Hold Funds");
         HashMap summary = (HashMap) savingsDetails.get("summary");
-        assertEquals("Verifying Account balance", accountBalance, summary.get("accountBalance"));
+        assertEquals(accountBalance, summary.get("accountBalance"), "Verifying Account balance");
     }
 
     @SuppressWarnings("rawtypes")
@@ -660,7 +668,7 @@ public class GuarantorTest {
 
     private Integer createLoanProductWithHoldFunds(final String mandatoryGuarantee, final String minimumGuaranteeFromGuarantor,
             final String minimumGuaranteeFromOwnFunds) {
-        System.out.println("------------------------------CREATING NEW LOAN PRODUCT ---------------------------------------");
+        LOG.info("------------------------------CREATING NEW LOAN PRODUCT ---------------------------------------");
         LoanProductTestBuilder builder = new LoanProductTestBuilder().withPrincipal("10000.00").withNumberOfRepayments("4")
                 .withRepaymentAfterEvery("1").withRepaymentTypeAsWeek().withinterestRatePerPeriod("2")
                 .withInterestRateFrequencyTypeAsMonths().withAmortizationTypeAsEqualPrincipalPayment().withInterestTypeAsDecliningBalance()
@@ -671,7 +679,7 @@ public class GuarantorTest {
     }
 
     private Integer applyForLoanApplication(final Integer clientID, final Integer loanProductID, final String disbursementDate) {
-        System.out.println("--------------------------------APPLYING FOR LOAN APPLICATION--------------------------------");
+        LOG.info("--------------------------------APPLYING FOR LOAN APPLICATION--------------------------------");
         final String loanApplicationJSON = new LoanApplicationTestBuilder() //
                 .withPrincipal("10000.00") //
                 .withLoanTermFrequency("4") //
